# signal

./: .gitignore  CLAUDE.md  nia.md
backend/: .env.example  .gitignore  README.md  api.py  main.py  pyproject.toml  signal_mcp.py  workers.py
backend/lib/: auth.py  context_ops.py  cosmos.py  followup_ops.py  inbox_ops.py  normalize.py  rollover.py  state_builder.py  sync_ops.py  task_ops.py  time_utils.py
migrate/: PLAN.md
web/: .env.example  .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/signal/[...path]/: route.ts
web/components/: AnalyticsView.tsx  App.tsx  Header.tsx  HistoryList.tsx  NotionIcon.tsx  QuestLogView.tsx  StateBadge.tsx  TaskDetail.tsx  TodayList.tsx
web/lib/: data.ts  signal-api.ts  types-ui.ts  types.ts  utils.ts
